[fix] fix store filterStore z-index & add map link

--- a/src/components/Layout/Navbar.scss
+++ b/src/components/Layout/Navbar.scss
@@ -176,6 +176,6 @@
   box-shadow: 5px 5px 15px -5px $skin-bright;
 }
 .click{
-  z-index: 3000;
+  z-index: 3500;
 }
 
